--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "express": "^4.17.1",
     "get-stream": "^6.0.1",
     "mongoose": "^5.12.7",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "swagger-jsdoc": "^6.0.9",
+    "swagger-ui-express": "^4.1.6",
+    "yamljs": "^0.3.0"
   }
 }
